# pypeline

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml
dummy_project/activities/: add_to_blacklist.py  authorize.py  create_profile.py  create_user.py  notify_admin.py  save_cache.py  send_email.py
dummy_project/models/: profile.py  user.py
dummy_project/pipelines/: create_user_pypeline.py
dummy_project/utils/: transaction.py
lib/: activity.py  activity_error.py  activity_result.py  pypeline.py  pypeline_activity.py  types.py
lib/exceptions/: pypeline_exception.py
tests/: activity_test.py  pypeline_test.py
