[tool.poetry]
name = "pypeline"
version = "0.0.1"
description = "hassle-free business logic handling"
authors = ["Oleg Vidyaev <oleggvvidyaev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.4"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
